[package]
name = "scarf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.15.0", features = ["full"] }
futures = "0.3.17"
comfy-table = "5.0.0"
